# dxt

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.devcontainer/: dev.Dockerfile  devcontainer.json  docker-compose.yml
docs/: architecture.md  build.md  framework_structure.md  implementation_summary.md  rdbms-abstraction-analysis.md
docs/design/: json-handling.md  provider-architecture.md
dxt/: __init__.py  cli.py  exceptions.py
dxt/buffers/: __init__.py  memory.py  parquet.py  staged.py
dxt/core/: __init__.py  buffer.py  config.py  connector.py  extractor.py  loader.py  pipeline_executor.py  pipeline_runner.py  type_mapper.py
dxt/models/: __init__.py  field.py  pipeline.py  results.py  source.py  stream.py
dxt/operators/postgres/: __init__.py  connector.py  copy_loader.py  extractor.py  loader.py  type_mapper.py
dxt/operators/sql/: __init__.py  connector.py  extractor.py  loader.py
dxt/operators/sqlite/: __init__.py  connector.py  extractor.py  loader.py  type_mapper.py
dxt/providers/: __init__.py
dxt/providers/base/: __init__.py  document.py  filestore.py  keyvalue.py  relational.py  webapi.py
dxt/providers/postgres/: __init__.py  connector.py  copy_loader.py  extractor.py  loader.py  type_mapper.py
dxt/providers/rest/: __init__.py  connector.py  extractor.py
dxt/providers/sqlite/: __init__.py  connector.py  extractor.py  loader.py  type_mapper.py
dxt/utils/: __init__.py  run_id.py  yaml_parser.py  yaml_utils.py
examples/: README.md  dvdrental_sql_query.yaml  dvdrental_to_dxt.yaml  postgres_example.py  test_core_framework.py
scripts/: dev-init.sh  restore-dvdrental.sh
tests/: test_core_framework.py  test_operator_loading.py  test_rest_extractor.py  test_rest_to_postgres.py  test_rest_to_postgres_e2e.py  test_sqlite_operators.py
tests/fixtures/: README.md  pipeline_example_new_structure.yaml  pipeline_with_copy_loader.yaml  pipeline_with_defaults.yaml  pipeline_with_invalid_operator.yaml  pipeline_with_pipeline_defaults.yaml  rest_to_postgres.yaml
xlt/: __init__.py  cli.py
